2004-07-13  Sven Neumann  <sven@gimp.org>
	* app/core/gimpimage-undo.c: resurrected some bit-rotting debug
	code. Might become useful one day.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13952 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-13  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimpimage-undo.c: resurrected some bit-rotting debug
+	code. Might become useful one day.
+
+2004-07-13  Sven Neumann  <sven@gimp.org>
+
 	* autogen.sh: when automake 1.8 is being used, require at least
 	version 1.8.3. Earlier versions of the automake-1.8 series don't
 	handle gimp-console correctly.
