--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-07-13  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimp-utils.[ch]: added new function
+	gimp_g_value_get_memsize() that attempts to calculate the memory
+	requirements for a GValue.
+
+	* app/text/gimptextundo.c (gimp_text_undo_get_memsize): use the
+	new function to obtain a better estimate for the size of the text
+	undo.
+
+2004-07-13  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimptexttool.c (gimp_text_tool_create_layer): plugged
 	a tiny memory leak.
 
