--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-13  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/jpeg.c: override the output_message error
+	handler in order to propagate warnings to the user interface
+	(related to bug #145212).
+
+2004-07-13  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimp-utils.[ch]: added new function
 	gimp_g_value_get_memsize() that attempts to calculate the memory
 	requirements for a GValue.
