--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-13  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimp-utils.c (gimp_g_value_get_memsize): handle NULL
+	string values.
+
+2004-07-13  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/jpeg.c: override the output_message error
 	handler in order to propagate warnings to the user interface
 	(related to bug #145212).
