* plug-ins/gimpressionist/*.[ch]: normalized some of brush.c's identifiers (= variable names and function name)
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13960 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-13  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/*.[ch]: normalized some of brush.c's 
+	identifiers (= variable names and function name)
+
 2004-07-13  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimp-utils.c (gimp_g_value_get_memsize): handle NULL
