2004-07-13  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpcolorbutton.c
	* libgimpwidgets/gimpcolornotebook.c
	* libgimpwidgets/gimpcolorscale.c
	* libgimpwidgets/gimpcolorscales.c
	* libgimpwidgets/gimpcolorselect.c
	* libgimpwidgets/gimpcolorselection.c
	* libgimpwidgets/gimpframe.c
	* libgimpwidgets/gimppickbutton.c
	* libgimpwidgets/gimpunitmenu.c: some code review and cosmetics.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13961 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-07-13  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpcolorbutton.c
+	* libgimpwidgets/gimpcolornotebook.c
+	* libgimpwidgets/gimpcolorscale.c
+	* libgimpwidgets/gimpcolorscales.c
+	* libgimpwidgets/gimpcolorselect.c
+	* libgimpwidgets/gimpcolorselection.c
+	* libgimpwidgets/gimpframe.c
+	* libgimpwidgets/gimppickbutton.c
+	* libgimpwidgets/gimpunitmenu.c: some code review and cosmetics.
+
 2004-07-13  Shlomi Fish  <shlomif@iglu.org.il>
 
 	* plug-ins/gimpressionist/*.[ch]: normalized some of brush.c's 
