2004-07-13  Sven Neumann  <sven@gimp.org>
	* app/Makefile.am (unused_symbols): added
	file_open_location_dialog_show to make the scanner link again.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13964 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-13  Sven Neumann  <sven@gimp.org>
+
+	* app/Makefile.am (unused_symbols): added
+	file_open_location_dialog_show to make the scanner link again.
+
 2004-07-07  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/libgimpwidgets-sections.txt
