* plug-ins/gimpressionist/preview.c * plug-ins/gimpressionist/sizemap.c: Eliminated two compile-time warnings.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13966 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-13  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/preview.c
+	* plug-ins/gimpressionist/sizemap.c:
+	eliminated two compile-time warnings.
+
 2004-07-13  Michael Natterer  <mitch@gimp.org>
 
 	Added a GimpProjection object which maintains the idle projection
