Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig-preview.[ch}
	* plug-ins/gfig/gfig.h: Made Cancel work properly.  Moved "show grid",
	"snap to grid", and "show image" checkbuttons back onto main
	interface.  Eliminated GtkPreview and removed undef of
	GTK_DISABLE_DEPRECATED from gfig-preview.c.  Removed some
	unused code.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13968 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-07-13  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/gfig/gfig-dialog.c
+	* plug-ins/gfig/gfig-preview.[ch}
+	* plug-ins/gfig/gfig.h: Made Cancel work properly.  Moved "show grid", 
+	"snap to grid", and "show image" checkbuttons back onto main 
+	interface.  Eliminated GtkPreview and removed undef of
+	GTK_DISABLE_DEPRECATED from gfig-preview.c.  Removed some 
+	unused code.
+
 2004-07-13  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/gflare/gflare.c (preview_handle_idle): use
