* plug-ins/gimpressionist/: Added the paper.h header for the functions defined in the paper.c module. (thus removing more declarations from gimpressionist.h)
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13969 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-13  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/: Added the paper.h header for the functions 
+	defined in the paper.c module. (thus removing more declarations
+	from gimpressionist.h)
+
 2004-07-13  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
 	* plug-ins/gfig/gfig-dialog.c
