* plug-ins/gimpressionist/: Moved the global declarations of img_has_alpha and create_colorpage to more specialized headers.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13971 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-13  Shlomi Fish  <shlomif@iglu.org.il>
 
+	* plug-ins/gimpressionist/: Moved the global declarations of 
+	img_has_alpha and create_colorpage to more specialized headers.
+
+2004-07-13  Shlomi Fish  <shlomif@iglu.org.il>
+
 	* plug-ins/gimpressionist/: Added the paper.h header for the functions 
 	defined in the paper.c module. (thus removing more declarations
 	from gimpressionist.h)
