--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-13  Shlomi Fish  <shlomif@iglu.org.il>
 
+	* plug-ins/gimpressionist/presets.c: Added underscores between
+	words in function names according to the GIMP's (and common 
+	sense) convention.
+
+2004-07-13  Shlomi Fish  <shlomif@iglu.org.il>
+
 	* plug-ins/gimpressionist/: Moved the global declarations of 
 	img_has_alpha and create_colorpage to more specialized headers.
 
