2004-07-14  Sven Neumann  <sven@gimp.org>
	* plug-ins/pagecurl/pagecurl.c: code cleanup. Use enums instead of
	a plethora of booleans. Added some macros for readability. Allow
	to use a reversed gradient for colorizing the curl.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13974 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-14  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/pagecurl/pagecurl.c: code cleanup. Use enums instead of
+	a plethora of booleans. Added some macros for readability. Allow
+	to use a reversed gradient for colorizing the curl.
+
 2004-07-14  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/Makefile.am
