fixed broken formatting.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13978 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -33,9 +33,9 @@
 	  "Joao S. O. Bueno" <gwidion@mpc.com.br>
 
 2004-06-08 Pablo G. del Campo <pablodc@bigfoot.com>
-                                                                                                                          
-        * es.po: Updated Spanish translation by
-                 Francisco Vila <francisco.vila@hispalinux.es>.
+
+	* es.po: Updated Spanish translation by Francisco Vila
+	<francisco.vila@hispalinux.es>.
 
 2004-06-08  Marco Ciampa  <ciampix@libero.it>
 
