Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* app/core/gimpitem.c: added documentation comments to some
	of the functions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13979 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-13  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* app/core/gimpitem.c: added documentation comments to some
+	of the functions.
+	
 2004-07-14  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/Makefile.am
