2004-07-14  Philip Lafleur  <plafleur@cvs.gnome.org>
	* plug-ins/common/mng.c (respin_cmap): Properly check the return
	value of find_unused_ia_color(). The plugin will now save indexed
	MNGs correctly; fixes bug #139947. Also converted tabs to spaces.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13981 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-14  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* plug-ins/common/mng.c (respin_cmap): Properly check the return
+	value of find_unused_ia_color(). The plugin will now save indexed
+	MNGs correctly; fixes bug #139947. Also converted tabs to spaces.
+
 2004-07-14  Michael Natterer  <mitch@gimp.org>
 
 	Code review & cleanup:
