2004-07-14  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/tiff.c: applied a patch done by Brion Vibber
	and Philip Lafleur that fixes loading of CMYK TIFF images on
	big-endian hardware (bug #147328).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13983 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-14  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/tiff.c: applied a patch done by Brion Vibber
+	and Philip Lafleur that fixes loading of CMYK TIFF images on
+	big-endian hardware (bug #147328).
+
 2004-07-14  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* plug-ins/common/mng.c (respin_cmap): Properly check the return
