--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-14  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpitem.c: converted tabs to spaces, cleanup,
+	reviewed new API docs.
+
 2004-07-14  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/tiff.c: applied a patch done by Brion Vibber
