2004-07-14  Philip Lafleur  <plafleur@cvs.gnome.org>
	* plug-ins/common/mng.c: Now writes a global palette chunk, and
	empty palette chunks for the frames that use it. This saves a
	bit of diskspace.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13988 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-14  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* plug-ins/common/mng.c: Now writes a global palette chunk, and
+	empty palette chunks for the frames that use it. This saves a
+	bit of diskspace.
+
 2004-07-14  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage.c: added properties "gimp", "id", "width",
