* plug-ins/gimpressionist/: Added more underscores to identifiers. Fixed some of the style (added whitespace before the '(' in function calls)
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13989 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-14  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/: Added more underscores to identifiers.
+	Fixed some of the style (added whitespace before the '(' in function
+	calls)
+
 2004-07-14  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* plug-ins/common/mng.c: Now writes a global palette chunk, and
