Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* devel-docs/objects.txt:  added file containing a map of Gimp's
	GObject hierarchy.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13994 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-14  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* devel-docs/objects.txt:  added file containing a map of Gimp's
+	GObject hierarchy .
+
 2004-07-14  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpstatusbar.[ch]: massively changed: removed
