Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* devel-docs/objects.txt: . . . and removed because it is
	redundant with devel-docs/app/app.hierarchy.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13995 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-14  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
+	* devel-docs/objects.txt: . . . and removed because it is
+	redundant with devel-docs/app/app.hierarchy.
+
+2004-07-14  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
 	* devel-docs/objects.txt:  added file containing a map of Gimp's
 	GObject hierarchy .
 
