2004-07-14  Sven Neumann  <sven@gimp.org>
	* app/app_procs.c (app_run): register a log handler for the
	"Gimp-Actions" domain.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13996 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-14  Sven Neumann  <sven@gimp.org>
+
+	* app/app_procs.c (app_run): register a log handler for the
+	"Gimp-Actions" domain.
+
 2004-07-14  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
 	* devel-docs/objects.txt: . . . and removed because it is
