2004-07-15  Michael Natterer  <mitch@gimp.org>
	* app/app-docs.sgml
	* app/app-sections.txt
	* app/app.types: updated and reviewed.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14000 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-15  Michael Natterer  <mitch@gimp.org>
+
+	* app/app-docs.sgml
+	* app/app-sections.txt
+	* app/app.types: updated and reviewed.
+
 2004-07-13  Sven Neumann  <sven@gimp.org>
 
 	* app/Makefile.am (unused_symbols): added
