2004-07-15  Michael Natterer  <mitch@gimp.org>
	* app/actions/file-commands.h: reordered to match the .c file.

	* app/core/gimpitem.c
	* app/vectors/gimpvectors-import.c: fixed API docs.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14001 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-15  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/file-commands.h: reordered to match the .c file.
+
+	* app/core/gimpitem.c
+	* app/vectors/gimpvectors-import.c: fixed API docs.
+
 2004-07-14  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* plug-ins/common/png.c:
