Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* app/core/gimpviewable.c: added gtk-doc comments for public
	functions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14002 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/core/gimpviewable.c: added gtk-doc comments for public
+	functions.
+
 2004-07-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/file-commands.h: reordered to match the .c file.
