ru.po: Updated Russian translation from Russian team <gnome-cyr@gnome.org>.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14003 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-15  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* ru.po: Updated Russian translation
+	from Russian team <gnome-cyr@gnome.org>.
+
 2004-06-08  Sven Neumann  <sven@gimp.org>
 
 	* Makefile.am (tips_POFILES): added ca.po (Catalan).
