2004-07-15  Philip Lafleur  <plafleur@cvs.gnome.org>
	* plug-ins/common/mng.c: cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14005 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-15  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* plug-ins/common/mng.c: cleanup.
+
 2004-07-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/core/gimpviewable.c: added gtk-doc comments for public
