2004-07-15  Michael Natterer  <mitch@gimp.org>
	* app/app_procs.c (app_run): register a log handler for the
	"Gimp-Menus" domain.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14006 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-15  Michael Natterer  <mitch@gimp.org>
+
+	* app/app_procs.c (app_run): register a log handler for the
+	"Gimp-Menus" domain.
+
 2004-07-15  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* plug-ins/common/mng.c: cleanup.
