--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-15  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimpviewable.[ch]: corrected API docs and fixed
+	function parameter names to silent gtk-doc warnings.
+
+2004-07-15  Michael Natterer  <mitch@gimp.org>
+
 	* app/app_procs.c (app_run): register a log handler for the
 	"Gimp-Menus" domain.
 
