2004-07-15  Michael Natterer  <mitch@gimp.org>
	* app/app-docs.sgml
	* app/app-sections.txt: more updates.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14008 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,6 +1,11 @@
 2004-07-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/app-docs.sgml
+	* app/app-sections.txt: more updates.
+
+2004-07-15  Michael Natterer  <mitch@gimp.org>
+
+	* app/app-docs.sgml
 	* app/app-sections.txt
 	* app/app.types: updated and reviewed.
 
