--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-15  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/helpbrowser/dialog.c
+	* plug-ins/helpbrowser/uri.c: don't warn if no help pages are
+	installed and the Home button is clicked.
+
 2004-07-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/file/file-open.c (file_open_layer): don't crash if no
