2004-07-15  Philip Lafleur  <plafleur@cvs.gnome.org>
	* plug-ins/winicon/icoload.c:
	* plug-ins/winicon/icosave.c: Applied a patch from Brion Vibber
	that fixes byte-swapping on big endian hosts.	Fixes bug #147610.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14011 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-15  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* plug-ins/winicon/icoload.c:
+	* plug-ins/winicon/icosave.c: Applied a patch from Brion Vibber
+	that fixes byte-swapping on big endian hosts.	Fixes bug #147610.
+
 2004-07-15  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/helpbrowser/dialog.c
