* plug-ins/gimpressionist/: normalized the ppmtools.c and ppmtool.h identifiers. Also fixed some (but not all) of the syntax.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14013 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-15  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/: normalized the ppmtools.c and
+	ppmtool.h identifiers. Also fixed some (but not all) of the
+	syntax.
+
 2004-07-15  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* plug-ins/winicon/icoload.c:
