--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-15  Shlomi Fish  <shlomif@iglu.org.il>
 
+	* plug-ins/gimpressionist/: normalized the identifiers of 
+	paper.c and paper.h. Made one variable local to the function
+	instead of module static.
+
+2004-07-15  Shlomi Fish  <shlomif@iglu.org.il>
+
 	* plug-ins/gimpressionist/: normalized the ppmtools.c and
 	ppmtool.h identifiers. Also fixed some (but not all) of the
 	syntax.
