--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-15  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* app/core/gimpdata.c: added gtk-doc comments for
+	public functions.
+
 2004-07-15  Shlomi Fish  <shlomif@iglu.org.il>
 
 	* plug-ins/gimpressionist/: normalized the identifiers of 
