--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-16  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell-transform.c: made gtk-doc even
+	happier; clarified meaning of the "use_offsets" parameter.
+
 2004-07-16  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpdata.c: 
